@@ -1,3 +1,9 @@
+2010-04-16  Steven G. Kargl  <kargl@gcc.gnu.org>
+
+	PR fortran/30073
+	* trans-array.c (gfc_trans_array_bound_check): Eliminate a redundant
+	block of code.  Set name to the variable associated with the descriptor.
+
 2010-04-14  Release Manager
 
 	* GCC 4.5.0 released.
